<resources>
    <string name="app_name">BarberLink</string>
    <string name="underline_sign_up"><u>Sign Up.</u></string>
    <string name="skip_intro">Skip Intro</string>
    <string name="follow_us_on">Follow Us On</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sign_in">MASUK</string>
    <string name="join_now">Bergabunglah Sekarang.</string>
    <string name="join_us">Jadilah pionir dalam industri perawatan dan penataan gaya rambut. Gunakan BarberLink Admin dan nikmati setiap keunggulannya, manfaatkanlah berbagai fitur dan teknologi canggih yang ada di dalamnya!</string>
    <string name="welcome_to">Selamat Datang di</string>
    <string name="underline_sign_in"><u>Sign In.</u></string>
    <string name="enter_number_phone">Masukkan Nomer Telepon Anda:</string>
    <string name="hint_number_phone">xxxxxxxxxxxx</string>
    <string name="data_secure">Kami akan menjaga kerahasiaan informasi dan data pribadimu.</string>
    <string name="next_text">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="barberlink"><font color="#1A1A1A">Barber</font><font color="#8FD14F">Link</font></string>
    <string name="tag_line_app">Together, we can take your business to the next level.</string>
    <string name="toolbar_register_page">Buat Akun Baru</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="register_your_barbershop">Daftarkan Barbershop Anda</string>
    <string name="label_input_barbershop_name">Nama Barbershop</string>
    <string name="hint_input_barbershop_name">Isikan nama barbershopmu</string>
    <string name="label_input_barbershop_email">Email Barbershop</string>
    <string name="hint_input_barbershop_email">Isikan email perusahaanmu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="title_sign_in_uppercase">SIGN IN</string>
    <string name="email_label">Alamat Email</string>
    <string name="email_hint">Email</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="icon_back_button_desc">Icon back button</string>
    <string name="toolbar_select_role_page">Pilih Roles</string>
    <string name="welcome_in_select_role">Selamat Datang!</string>
    <string name="instructions_guide">\'Untuk melanjutkan, pilih masuk sebagai:</string>
    <string name="image_owner_ilustration_desc">Image owner ilustration</string>
    <string name="btn_select_owner_admin">Owner/Admin</string>
    <string name="or">atau</string>
    <string name="image_capster_ilustration_desc">Image capster ilustration</string>
    <string name="btn_select_employee">Pegawai</string>
    <string name="image_teller_ilustration_desc">image teller ilustration</string>
    <string name="btn_select_kasir_teller">Kasir/Teller</string>
    <string name="instructions_guide_to_generate_code_access">Buat kode akses kasir dari akun owner pada <b>Kelola Toko > Kode Akses Kasir</b></string>
    <string name="username_template">\u0040%1$s</string>
    <string name="star_image_desc">Star image to rating ilustration</string>
    <string name="title_home_page_capster"><font color="#1A1A1A">BARBER</font><font color="#8FD14F">LINK</font></string>
    <string name="icon_message_desc">Icon pesan homepage capster</string>
    <string name="icon_setting_desc">Icon setting preference</string>
    <string name="icon_exit_desc">Icon exit from queue tracker page</string>
    <string name="welcome_shake">Selamat Datang 👋</string>
    <string name="image_card_balance_desc">Image background card balance</string>
    <string name="total_income_label">Total Pendapatan</string>
    <string name="points">points</string>
    <string name="presence_label">Presensi</string>
    <string name="presence_desc">Pindai Code QR</string>
    <string name="permission_for_attendance_label">Perijinan</string>
    <string name="permission_for_attendance_desc">Isikan E-Formulir</string>
    <string name="label_employee_bon">Bon Pegawai</string>
    <string name="label_submit_bill">Ajukan Bon</string>
    <string name="employee_commission_label">Komisi Pegawai</string>
    <string name="sevice_commission_label">Komisi Jasa</string>
    <string name="per_day">/day</string>
    <string name="product_commission_label">Komisi Produk</string>
    <string name="queue_information_label">Informasi Antrian</string>
    <string name="status_completed_queue">Telah Diselesaikan</string>
    <string name="status_waiting_queue">Sedang Menunggu</string>
    <string name="user_profile_placeholder_desc">User profile picture</string>
    <string name="five_star_rating">5.0</string>
    <string name="icon_gender_ilustration">Icon gender ilustration</string>
    <string name="icon_completed_queue_desc">Icon completed queue ilustration</string>
    <string name="icon_waiting_queue_ilustration">Icon waiting queue ilustration</string>
    <string name="icon_cancel_queue_ilustration">Icon canceled queue ilustration</string>
    <string name="fab_list_queue_desc">Floating button list queue</string>
    <string name="fab_to_code_access">Floating button to code access barbershop</string>
    <string name="image_chart_bar_ilustration">Image chart-bar ilustration</string>
    <string name="icon_edit_button_desc">Icon edit button</string>
    <string name="icon_scan_qr_code_desc">Icon scan qr code</string>
    <string name="toolbar_select_account_page">Pilih Akun</string>
    <string name="label_list_account_employee">Daftar Pegawai</string>
    <string name="image_cyber_security_ilustration">illustrative image for user account security</string>
    <string name="detail_section_password"><![CDATA[Pastikan data pribadimu terlindungi: Gunakan setidaknya 8 karakter dengan campuran huruf, angka, & simbol.]]></string>
    <string name="password_less_than_8">Password kurang dari 8 karakter</string>
    <string name="password_is_too_short">Password setidaknya harus terdiri dari 8 karakter</string>
    <string name="create_password_intruction">Buat password baru untuk keamanan akunmu.</string>
    <string name="input_password_label">Masukkan Password</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account">Buat Akun</string>
    <string name="image_success_icon">image success icon</string>
    <string name="Congratulations">Selamat!</string>
    <string name="submessage_Congratulations">Akun kamu telah terdaftar</string>
    <string name="btn_done">Selesai</string>
    <string name="title_page_input_code_access">Masukkan Kode Akses Kasir</string>
    <string name="hint_code_access_teller">Kode Akses Kasir</string>
    <string name="hint_code_access">ABCDE12345</string>
    <string name="text_information_for_code_access">Dengan kode akses kasir, Pegawai bisa masuk akun tanpa menggunakan email dan password owner.</string>
    <string name="label_request_confirmation">Konfirmasi Permintaan</string>
    <string name="question_for_request_confirmation">Apakah Anda benar-benar ingin menandai nomor antrian di bawah ini telah selesai?</string>
    <string name="warning_for_random_confirmation"><![CDATA[Apakah Anda benar-benar ingin menindaklanjuti nomor antrian dengan <b>Random Capster</b> di bawah ini?. Jika iya, <b>maka pastikan pelanggan mengetahui perubahan harga yang mungkin terjadi!!!</b>]]></string>
    <string name="request_confirmation_execution_queue">Apakah Anda benar-benar ingin menindaklanjuti pelanggan dengan nomor antrian di bawah ini?.</string>
    <string name="label_input_payment_amount">Masukkan Nominal Pembayaran:</string>
    <string name="payment_amount_hint">Nominal Pembayaran</string>
    <string name="btn_yes">Ya</string>
    <string name="btn_no">Tidak</string>
    <string name="pin_pop_up_title">PIN</string>
    <string name="instructions_for_inserting_pin">Please input it below…</string>
    <string name="success_request_title">Permintaan Sukses!</string>
    <string name="label_change_money">Kembalian:</string>
    <string name="payment_method_label">Metode Pembayaran</string>
    <string name="switch_queue_label">Alihkan Antrian</string>
    <string name="label_select_capster_intructions">Pilih Capster:</string>
    <string name="hint_list_capster">Daftar Capster</string>
    <string name="btn_save_changes">Simpan Perubahan</string>
    <string name="template_number_of_reviews">(%1$d Reviews)</string>
    <string name="money_icon_desc">Money icon for price illustration</string>
    <string name="label_list_layanan">Layanan</string>
    <string name="label_list_paket_bundling">Paket Bundling</string>
    <string name="label_list_paket_bundling2">Daftar Bundling</string>
    <string name="see_more">Lihat Semua</string>
    <string name="label_list_employee">Pegawai</string>
    <string name="label_list_product">Produk</string>
    <string name="remove">Hapus</string>
    <string name="tag_line_barber_template">- %1$s</string>
    <string name="kode_kasir_outlet_label">Kode Kasir Outlet</string>
    <string name="default_empty_code_access">------</string>
    <string name="open_state_label_switch">Buka</string>
    <string name="close_state_label_switch">Tutup</string>
    <string name="code_access_state_non_active_value">Non-Active</string>
    <string name="code_access_state_active_value">Active</string>
    <string name="generate_btn">Generate</string>
    <string name="last_update_label">terakhir diperbarui:</string>
    <string name="revoke_btn">Revoke</string>
    <string name="question_mark">\?????</string>
    <string name="difference_value_default">\???</string>
    <string name="empty_member_status">\????</string>
    <string name="toolbar_booking_page">Booking Page</string>
    <string name="tgl_label">Tgl</string>
    <string name="nb_text_phone">*NB: Tambahkan terlebih dahulu jika belum tersedia.</string>
    <string name="button_add_new_customer_desc">Button add new customer</string>
    <string name="list_customer_label">Daftar Customer</string>
    <string name="number_of_reviews_placeholder">(1234 Reviews)</string>
    <string name="anyone_available">Siapapun yang Tersedia</string>
    <string name="label_list_service">Daftar Layanan</string>
    <string name="btn_reset_desc">Reset</string>
    <string name="label_list_orders">Daftar Pesanan</string>
    <string name="label_capster_name">Nama Capster:</string>
    <string name="label_details_order">Detail Pesanan:</string>
    <string name="btn_next">Lanjutkan</string>
    <string name="btn_remove_service_desc">Remove button for list service selected</string>
    <string name="doit_template">Antrian selanjutnya adalah antrian <b>nomor %1$s</b>, dengan nama pelanggan <b>%1$s</b>. Apakah anda yakin ingin menyelesaikan pekerjaan ini? atau mungkin anda dapat beristirahat sejenak.</string>
    <string name="toolbar_settings_page">Settings</string>
    <string name="ponsel_notification">Notifikasi Ponsel</string>
    <string name="sound">Suara</string>
    <string name="vibrate">Bergetar</string>
    <string name="microphone">Microphone</string>
    <string name="camera">Camera</string>
    <string name="Location">Lokasi</string>
    <string name="logout">logout</string>
    <string name="network_tracking">Pelacakan Jaringan</string>
    <string name="version_1_0_0_2024_barberlink_inc">Version 1.0.0 ©2024 BarberLink Inc.</string>
    <string name="permission_app">Perijinan Aplikasi</string>
    <string name="security_and_privacy">Privasi dan Keamanan</string>
    <string name="do_it_text">Do It</string>
    <string name="work_this_queue">Kerjakan Antrian Ini</string>
    <string name="nav_header_title">Barberlink</string>
    <string name="nav_header_subtitle">android.studio@barberlink.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="next">Next</string>
</resources>