<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/icon_back_button_desc" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/toolbar_register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <!-- App Name -->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/barberlink"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:fontFamily="@font/arial_regular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/tag_line_app"
        android:textSize="12sp"
        android:textColor="@color/black" />

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_below="@id/tvSubtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/uploud_photo"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerInside" />

    <!-- Section Title -->
    <TextView
        android:id="@+id/tvSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile"
        android:layout_centerHorizontal="true"
        android:text="@string/register_your_barbershop"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black_font_color" />

    <!-- Barbershop Name Label -->
    <TextView
        android:id="@+id/tvBarbershopNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSectionTitle"
        android:text="@string/label_input_barbershop_name"
        android:textSize="13sp"
        android:textColor="@color/black_font_color"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"/>

    <!-- Barbershop Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapperBarbershopName"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="24dp"
        android:layout_below="@id/tvBarbershopNameLabel"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/green_lime_wf"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBarbershopName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:hint="@string/hint_input_barbershop_name"
            android:inputType="text"
            android:textSize="12.5sp"
            android:drawableEnd="@drawable/ic_shop" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Barbershop Email Label -->
    <TextView
        android:id="@+id/tvBarbershopEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wrapperBarbershopName"
        android:text="@string/label_input_barbershop_email"
        android:textSize="13sp"
        android:textColor="@color/black_font_color"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"/>

    <!-- Barbershop Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapperBarbershopEmail"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@id/tvBarbershopEmailLabel"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/green_lime_wf"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBarbershopEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:hint="@string/hint_input_barbershop_email"
            android:inputType="textEmailAddress"
            android:textSize="12.5sp"
            android:drawableEnd="@drawable/ic_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Next Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/disable_grey_background"
        android:text="@string/next"
        android:textColor="#FFFFFF" />

</RelativeLayout>
