<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UserInterface.SignUp.SignUpStepThree">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/icon_back_button_desc" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/toolbar_register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageCyberSecurity"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="20dp"
        android:src="@drawable/cyber_security"
        android:contentDescription="@string/image_cyber_security_ilustration" />

    <TextView
        android:id="@+id/cyberSecurityDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageCyberSecurity"
        android:fontFamily="@font/arial_medium"
        android:layout_marginHorizontal="45dp"
        android:textColor="@color/black_font_color"
        android:text="@string/detail_section_password"
        android:textAlignment="center"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/intruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial_medium"
        android:textColor="@color/black_font_color"
        android:layout_below="@id/cyberSecurityDescription"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/create_password_intruction"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial_medium"
        android:textColor="@color/black_font_color"
        android:layout_below="@id/intruction"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:textStyle="bold"
        android:text="@string/input_password_label"
        android:textSize="16sp" />

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapperPassword"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="24dp"
        android:layout_below="@id/passwordLabel"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/green_lime_wf"
        android:layout_marginTop="13dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:hint="@string/password_hint"
            android:inputType="text"
            android:textSize="12.5sp"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/ic_lock" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapperConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="24dp"
        android:layout_below="@id/wrapperPassword"
        app:boxStrokeColor="@color/green_lime_wf"
        app:hintEnabled="false"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="text"
            android:textSize="12.5sp"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/ic_lock" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Create Account Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/disable_grey_background"
        android:text="@string/create_account"
        android:textColor="#FFFFFF" />

</RelativeLayout>
