<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/bg_side_bar2"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/logo_side_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:layout_marginTop="4dp"
        android:textSize="27sp"
        android:textColor="@color/white"
        android:alpha="0.8"
        android:fontFamily="@font/arial_black"/>

    <TextView
        android:id="@+id/emailCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:alpha="0.9"
        android:layout_marginTop="-1dp"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>